# photo-sync

./: .gitignore  CMakeLists.txt  CMakePresets.json  ExtendedFileSystem.cpp  FileManager.cpp  FileManager.h  MTPFileModel.cpp  MTPFileSystem.cpp  PhotoSync.cpp  PhotoSync.h  PhotoSync.ui  PhotoSync.vcxproj  PhotoSync.vcxproj.filters  README.md  WPDEvents.cpp  main.cpp
resources/: PhotoSync.rc
src/: DateParser.cpp  DateParser.hpp  FileData.cpp  FileData.hpp  FileManager.cpp  FileManager.hpp  PhotoSync.cpp  PhotoSync.hpp  Settings.cpp  Settings.hpp  console_log_sink.cpp  console_log_sink.hpp  date_parser.cpp  date_parser.hpp  file.cpp  file.hpp  file_data.cpp  file_data.hpp  file_manager.cpp  file_manager.hpp  log_init.cpp  log_init.hpp  log_record.hpp  log_sink.hpp  logger.cpp  logger.hpp  main.cpp  photo_sync.cpp  photo_sync.hpp  photo_sync.ui  rotating_file_sink.cpp  rotating_file_sink.hpp  sort_mode.hpp
